<resources>
    <string name="app_name">PitStop</string>
    <string name="title_activity_cadastro_produto">CadastroProdutoActivity</string>
    <string name="produto">Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="preco">Preço</string>
    <string name="loja">Loja</string>
    <string name="endereco">Endereço</string>
    <string name="funcionario">Funcionário</string>
    <string name="entrada">Entrada de Produto</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="usuario">Usuario</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_loja">Lojas</string>
    <string name="nav_item_produto">Produtos</string>
    <string name="nav_item_vendas">Vendas</string>
    <string name="nav_item_cadastrar_vendas">Cadastrar Vendas</string>
    <string name="nav_item_relatorio_vendas_pdf">Relatorio de vendas pdf</string>
    <string name="nav_item_cadastrar_usuario">Cadastrar Usuário</string>
    <string name="nav_item_avaria">Avaria</string>
    <string name="nav_item_movimentacao_Produto">Movimentação de Produto</string>
    <string name="nav_item_relatorio_venda">Relatório de Vendas</string>
    <string name="nav_item_relatorio_Entrada_Produto">Rel. de Ent. de Produtos</string>
    <string name="nav_item_relatorio_avaria">Relatório de Avaria</string>
    <string name="nav_item_relatorio_movimentacao_Produto">Rel. de Mov. de Produtos.</string>
    <string name="nav_item_relatorio_furo">Relatório de Furo</string>
    <string name="nav_item_furo">Furo</string>
    <string name="nav_item_relatorio_geral">Relatório Geral</string>

    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <string name="default_navigation_view">Default Navigation View</string>
    <string name="custom_navigation_view">Custom Navigation View</string>
    <string name="others">Others</string>

    <!--  Navigation View String Values  -->
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="share">Share App</string>
    <string name="rate">Rate App</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="lucro">Lucro</string>
    <string name="resumo">Resumo</string>
    <string name="forma_de_pagamento">Forma de Pagamento</string>
    <string name="Data_de">De</string>
    <string name="data_inicial">Data inicial</string>
    <string name="Data_ate">Até</string>
    <string name="filtro_do_relatorio">Filtro</string>
    <string name="gerar_relatorio">Gerar Relatório</string>
    <string name="gerar_pdf">Gerar PDF</string>
    <string name="relatorio">Relatório</string>
    <string name="carrinho">Carrinho</string>
    <string name="loja_de_origem">Loja de origem</string>
    <string name="loja_de_destinho">Loja de destino</string>
    <string name="informacoes_de_cadastro">Informações de Cadastro</string>
    <string name="digite_o_nome_do_produto">Toque para escolher um produto</string>
    <string name="preco_de_compra">Preço de compra</string>
    <string name="adicionar">Adicionar</string>
    <string name="preco_da_unidade_do_produto">Preço da unidade do produto</string>
    <string name="totalDinheiro">Total</string>
    <string name="total_no_cartao">Total no cartão</string>
    <string name="data_final">Data final</string>
    <string name="data">Data</string>
    <string name="prejuizo">Prejuizo</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="cartao">Cartão</string>
    <string name="valor">valor</string>
    <string name="gerar_grafico">gerar gráfico</string>
    <string name="total_das_vendas_de_cada_loja">Vendas por loja</string>
    <string name="total_das_vendas_de_cada_funcionario">Vendas por funcionário</string>
    <string name="total_das_vendas_por_dia_em_cada_loja">Vendas por dia em cada loja</string>


</resources>


