<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c0c0c0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:layout_span="2"
            android:gravity="start"
            android:text="@string/loja_de_origem"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:layout_span="2"
            android:gravity="start"
            android:text="@string/loja_de_destinho"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_margin="8dp"
            android:layout_span="2"
            android:gravity="start"
            android:text="@string/produto"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_margin="8dp"
            android:layout_span="2"
            android:gravity="start"
            android:text="@string/quantidade"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_margin="8dp"
            android:layout_span="2"
            android:gravity="start"
            android:text="@string/data"
            android:textStyle="bold" />

    </TableRow>


</TableLayout>