<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Main Menus -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/produto"
            android:checkable="true"
            android:checked="false"
            android:icon="@mipmap/garrafadecerveja"
            android:title="@string/nav_item_produto" />


        <item
            android:id="@+id/cad_vendas"
            android:checkable="true"
            android:checked="false"
            android:icon="@mipmap/caixaregistradora"
            android:title="@string/nav_item_vendas" />
        <item
            android:id="@+id/relatorio_vendas"
            android:checkable="true"
            android:checked="false"
            android:icon="@mipmap/performancedevendas"
            android:title="@string/nav_item_relatorio_venda" />
        <item
            android:id="@+id/relatorio_geral"
            android:checkable="true"
            android:checked="false"
            android:icon="@mipmap/relatorio"
            android:title="@string/nav_item_relatorio_geral" />


    </group>

    <!--  Sub Menus  -->
    <!--<item android:title="Relatorios" >-->
    <!--<menu android:checkableBehavior="single">-->

    <!--<group >-->

    <!--<item-->
    <!--android:id="@+id/share_app"-->
    <!--android:icon="@mipmap/ic_no_image"-->
    <!--android:title="@string/share" />-->
    <!--<item-->
    <!--android:id="@+id/rate_app"-->
    <!--android:icon="@mipmap/ic_no_image"-->
    <!--android:title="@string/rate" />-->
    <!--<item-->
    <!--android:id="@+id/settings"-->
    <!--android:icon="@mipmap/ic_no_image"-->
    <!--android:title="@string/settings" />-->
    <!--<item-->
    <!--android:id="@+id/help"-->
    <!--android:icon="@mipmap/ic_no_image"-->
    <!--android:title="@string/help" />-->
    <!--</group>-->
    <!--</menu>-->
    <!--</item>-->


</menu>