<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_intervalo_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/Data_de" />

        <TextView
            android:id="@+id/et_data_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/data_inicial"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/Data_ate" />

        <TextView
            android:id="@+id/et_data_fim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="Data final"
            android:textSize="15sp" />
    </LinearLayout>

    <!--<Button-->
    <!--android:id="@+id/bt_limpar_datas"-->
    <!--android:layout_width="24dp"-->
    <!--android:layout_height="24dp"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:background="@drawable/ic_action_undo"/>-->

</LinearLayout>